--- a/Titanic/doc/TitanicData.ipynb
+++ b/Titanic/doc/TitanicData.ipynb
@@ -2,66 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "       PassengerId    Survived      Pclass         Age       SibSp  \\\n",
-      "count   891.000000  891.000000  891.000000  714.000000  891.000000   \n",
-      "mean    446.000000    0.383838    2.308642   29.699118    0.523008   \n",
-      "std     257.353842    0.486592    0.836071   14.526497    1.102743   \n",
-      "min       1.000000    0.000000    1.000000    0.420000    0.000000   \n",
-      "25%     223.500000    0.000000    2.000000   20.125000    0.000000   \n",
-      "50%     446.000000    0.000000    3.000000   28.000000    0.000000   \n",
-      "75%     668.500000    1.000000    3.000000   38.000000    1.000000   \n",
-      "max     891.000000    1.000000    3.000000   80.000000    8.000000   \n",
-      "\n",
-      "            Parch        Fare  \n",
-      "count  891.000000  891.000000  \n",
-      "mean     0.381594   32.204208  \n",
-      "std      0.806057   49.693429  \n",
-      "min      0.000000    0.000000  \n",
-      "25%      0.000000    7.910400  \n",
-      "50%      0.000000   14.454200  \n",
-      "75%      0.000000   31.000000  \n",
-      "max      6.000000  512.329200  \n",
-      "   PassengerId  Survived  Pclass  \\\n",
-      "0            1         0       3   \n",
-      "1            2         1       1   \n",
-      "2            3         1       3   \n",
-      "3            4         1       1   \n",
-      "4            5         0       3   \n",
-      "\n",
-      "                                                Name     Sex   Age  SibSp  \\\n",
-      "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
-      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
-      "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
-      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
-      "4                           Allen, Mr. William Henry    male  35.0      0   \n",
-      "\n",
-      "   Parch            Ticket     Fare Cabin Embarked  \n",
-      "0      0         A/5 21171   7.2500   NaN        S  \n",
-      "1      0          PC 17599  71.2833   C85        C  \n",
-      "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
-      "3      0            113803  53.1000  C123        S  \n",
-      "4      0            373450   8.0500   NaN        S  \n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      "PassengerId    891 non-null int64\n",
+      "Survived       891 non-null int64\n",
+      "Pclass         891 non-null int64\n",
+      "Name           891 non-null object\n",
+      "Sex            891 non-null object\n",
+      "Age            714 non-null float64\n",
+      "SibSp          891 non-null int64\n",
+      "Parch          891 non-null int64\n",
+      "Ticket         891 non-null object\n",
+      "Fare           891 non-null float64\n",
+      "Cabin          204 non-null object\n",
+      "Embarked       889 non-null object\n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.6+ KB\n",
+      "None\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
-    "root = \"/home/wanghuiqin/workspace/data/Titanic/\"\n",
-    "origion = pd.read_csv(root+\"train.csv\")\n",
-    "print(origion.describe())\n",
-    "print(origion.head())"
+    "root_path = '/home/wanghuiqin/workspace/data/Titanic/'\n",
+    "dataSet = pd.read_csv(root_path+\"train.csv\")\n",
+    "print(dataSet.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -76,8 +54,62 @@
    ],
    "source": [
     "#analysis\n",
-    "class_tag = origion['Survived']\n",
+    "class_tag = dataSet['Survived']\n",
     "print(class_tag.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('all male:', 577, 'all female:', 314)\n",
+      "('survived male:', 109, 'survived female:', 233)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [dataSet[dataSet.Sex=='male']['Sex'].size,dataSet[dataSet.Sex=='female']['Sex'].size]\n",
+    "y = [dataSet[(dataSet['Survived']==1) & (dataSet['Sex']=='male')]['Sex'].size,dataSet[(dataSet['Survived']==1) & (dataSet['Sex']=='female')]['Sex'].size]\n",
+    "print(\"all male:\",x[0],\"all female:\",x[1])\n",
+    "print(\"survived male:\",y[0],'survived female:',y[1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        Survived\n",
+      "Sex             \n",
+      "female       314\n",
+      "male         577\n",
+      "1    136\n",
+      "3    119\n",
+      "2     87\n",
+      "Name: Pclass, dtype: int64\n",
+      "S    217\n",
+      "C     93\n",
+      "Q     30\n",
+      "Name: Embarked, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "sex_analy = dataSet.loc[:,['Survived','Sex']].groupby(['Sex'])\n",
+    "print(sex_analy.count())\n",
+    "Pclass_analy = dataSet[dataSet['Survived']==1]['Pclass']\n",
+    "print(Pclass_analy.value_counts())\n",
+    "Embarked_analy = dataSet[dataSet['Survived']==1]['Embarked']\n",
+    "print(Embarked_analy.value_counts())"
    ]
   },
   {
