--- a/Titanic/doc/TitanicData.ipynb
+++ b/Titanic/doc/TitanicData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,10 +114,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C23 C25 C27        4\n",
+      "G6                 4\n",
+      "B96 B98            4\n",
+      "D                  3\n",
+      "C22 C26            3\n",
+      "E101               3\n",
+      "F2                 3\n",
+      "F33                3\n",
+      "B57 B59 B63 B66    2\n",
+      "C68                2\n",
+      "B58 B60            2\n",
+      "E121               2\n",
+      "D20                2\n",
+      "E8                 2\n",
+      "E44                2\n",
+      "B77                2\n",
+      "C65                2\n",
+      "D26                2\n",
+      "E24                2\n",
+      "E25                2\n",
+      "B20                2\n",
+      "C93                2\n",
+      "D33                2\n",
+      "E67                2\n",
+      "D35                2\n",
+      "D36                2\n",
+      "C52                2\n",
+      "F4                 2\n",
+      "C125               2\n",
+      "C124               2\n",
+      "                  ..\n",
+      "F G63              1\n",
+      "A6                 1\n",
+      "D45                1\n",
+      "D6                 1\n",
+      "D56                1\n",
+      "C101               1\n",
+      "C54                1\n",
+      "D28                1\n",
+      "D37                1\n",
+      "B102               1\n",
+      "D30                1\n",
+      "E17                1\n",
+      "E58                1\n",
+      "F E69              1\n",
+      "D10 D12            1\n",
+      "E50                1\n",
+      "A14                1\n",
+      "C91                1\n",
+      "A16                1\n",
+      "B38                1\n",
+      "B39                1\n",
+      "C95                1\n",
+      "B78                1\n",
+      "B79                1\n",
+      "C99                1\n",
+      "B37                1\n",
+      "A19                1\n",
+      "E12                1\n",
+      "A7                 1\n",
+      "D15                1\n",
+      "Name: Cabin, Length: 147, dtype: int64\n",
+      "147\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataSet['Cabin'].value_counts())\n",
+    "print(len(dataSet['Cabin'].value_counts()))"
+   ]
   }
  ],
  "metadata": {
